Was able to add the footer all the way to the bottom of the page which distorted the background image a little bit (Need to figure out how to fix that).

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -192,9 +192,12 @@ p{ border: 1px solid #c0c0c0;
   color: #FFFFFF;
 }
 
-#footer {
-  grid-row: 9;
-  grid-column: 1 / 2;
-  text-align: center;
-  font-size: 0.778em; /*14px/18px = o.778em*/
+#footer{
+    width: 100%;
+    height: 200px;
+    background-color: #000000;
+    z-index: 10;
+    margin-top: 1000px;
+    position: relative;
+    clear: both;
 }
